# LFinance

./: .gitignore  README.md  bonds.py  etfs.py  pyproject.toml
commodities/: correlations.py  fetch.py
companies/: aida.py  analysis.ipynb  exploratory.ipynb  fill.py  time_series.ipynb  xlsx.py
companies/companies/: itemloaders.py  items.py  middlewares.py  pipelines.py  settings.py
companies/companies/spiders/: justetf.py  ms_bs.py
data/: AllProductData.xlsx  README.md  amundi.py  database.db-journal  fetch_error.txt  invesco.py  ishares.py  spdr.py  unroll.py  vanguard.py  xtrackers.py
data/utilities/: common.py  country.py  database.py  translate.py
etfs/: countries.geojson  db.py  etf_portfolio.ipynb  ishares.py  ishares_anal.ipynb  vanguard.py
etfs/.virtual_documents/: etf_portfolio.ipynb
utilities/: country.py
