[project]
name = "lfinance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "country-converter>=1.3.1",
    "duckdb>=1.3.2",
    "emoji>=2.14.1",
    "lxml>=6.0.0",
    "marimo>=0.14.11",
    "matplotlib>=3.10.3",
    "playwright>=1.54.0",
    "plotly>=6.2.0",
    "polars>=1.31.0",
    "requests>=2.32.4",
    "ruff>=0.12.4",
    "scrapy>=2.13.3",
    "sqlglot>=27.4.1",
    "squarify>=0.4.4",
]
