[project]
name = "lfinance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.14",
    "beautifulsoup4>=4.13.4",
    "fastexcel>=0.14.0",
    "httpx[http2,https]>=0.28.1",
    "lxml>=6.0.0",
    "marimo>=0.14.11",
    "matplotlib>=3.10.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "plotly>=6.2.0",
    "polars>=1.31.0",
    "requests>=2.32.4",
    "ruff>=0.12.4",
    "tqdm>=4.67.1",
]
